<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Audio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_grabar">Grabar</string>
    <string name="action_aniadir">Añadir</string>
    <string name="stop">Stop</string>
    <string name="cero">0:00</string>
    <string name="play">Play</string>
    <string name="cancion">Cancion</string>
    <string name="anterior">Ant</string>
    <string name="siguiente">Sig</string>
    <string name="pausa">Pausa</string>

</resources>
